# talentlabs-interview

./: README.md
.github/workflows/: backend-tests.yml
backend/: db.sqlite3  docker-compose.yml  fake_jobs.json  insert_fake_jobs.py  pyproject.toml  pytest.ini
backend/api/: exceptions.py  schemas.py  settings.py  urls.py
backend/api/migrations/: 0001_initial.py  0002_job_is_active_job_is_deleted.py
backend/api/models/: jobs.py
backend/api/presentation/: jobs.py
backend/api/repository/: jobs.py
backend/api/routes/: __init__.py  auth.py  jobs.py
backend/api/service/: jobs.py
backend/tests/: conftest.py
backend/tests/routes/: test_jobs.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/src/: App.vue  main.ts
frontend/src/api/: auth.ts  jobs.ts  useJob.ts  useJobMutation.ts  useJobs.ts
frontend/src/components/common/: Alert.vue  Avatar.vue  Badge.vue  Button.vue  Card.vue  Checkbox.vue  DatePicker.vue  Dialog.vue  Divider.vue  Drawer.vue  FormDialog.vue  Icon.vue  Input.vue  LanguageSwitcher.vue  Pagination.vue  Select.vue  Spinner.vue  Typography.vue  index.ts
frontend/src/components/features/: JobCard.vue  JobDetailDrawer.vue
frontend/src/components/icons/: IconBuilding.vue  IconCalendar.vue  IconClose.vue  IconEnvelope.vue  IconLocationPin.vue  IconStar.vue
frontend/src/data/: jobs.json
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.ts  zh.ts
frontend/src/router/: index.ts
frontend/src/types/: job.ts
frontend/src/utils/: httpClient.ts
frontend/src/views/: JobListView.vue
(+5 files in other folders)
